--- a/apresentacao_tex/main.tex
+++ b/apresentacao_tex/main.tex
@@ -83,36 +83,90 @@
 \begin{frame}
 	\frametitle{Primeira Rede - Treinamento}
 	\centering
-	\begin{minipage}{.5\textwidth}
+%	\begin{minipage}{.5\textwidth}
 		\centering
-		\par Treinamento:
+		\par Treinamento
 		\begin{itemize}
 			\item Épocas = 10
 			\item Itens = 60000
+			\item Tempo = 30 minutos
 		\end{itemize}		
-	\end{minipage}%
-	\begin{minipage}{.5\textwidth}
+%	\end{minipage}%
+%	\begin{minipage}{.5\textwidth}
 	\centering
 	\par Teste
 	\begin{itemize}
 		\item Itens = 10000
 	\end{itemize}		
-\end{minipage}%
+	\centering
+	\par Resultado na base de teste
+	\begin{itemize}
+		\item 98.02\%
+	\end{itemize}
+%\end{minipage}%
 
 \end{frame}
 
 \begin{frame}
-	\frametitle{Convolução}
+	\frametitle{Convolução - 1}
 	\centering
 	\includegraphics[width=.8\paperwidth]{images/fabio/conv_1}
 \end{frame}
 
 \begin{frame}
-	\frametitle{Ativação}
+	\frametitle{Ativação - 1}
 	\centering
 	\includegraphics[height=.8\paperheight]{images/fabio/ativ_1}
 \end{frame}
 
+\begin{frame}
+	\frametitle{Convolução - 2}
+	\centering
+	\includegraphics[width=.8\paperwidth]{images/fabio/conv_2}
+\end{frame}
+
+\begin{frame}
+	\frametitle{Ativação - 2}
+	\centering
+	\includegraphics[height=.8\paperheight]{images/fabio/ativ_2}
+\end{frame}
+
+\begin{frame}
+	\frametitle{Pooling}
+	\centering
+	\includegraphics[height=.8\paperheight]{images/fabio/pooling_1}
+\end{frame}
+
+\begin{frame}
+	\frametitle{Flatten ( N * 2D -> 1D)}
+	\centering
+	\includegraphics[height=.8\paperheight]{images/fabio/flatten_1}
+\end{frame}
+
+
+\begin{frame}
+	\frametitle{Dense - 1}
+	\centering
+	\includegraphics[height=.8\paperheight]{images/fabio/dense1}
+\end{frame}
+
+\begin{frame}
+	\frametitle{Ativação - 3}
+	\centering
+	\includegraphics[height=.8\paperheight]{images/fabio/ativ_3}
+\end{frame}
+
+\begin{frame}
+	\frametitle{Dense - 2}
+	\centering
+	\includegraphics[height=.8\paperheight]{images/fabio/dense2}
+\end{frame}
+
+\begin{frame}
+	\frametitle{Ativação - 4}
+	\centering
+	\includegraphics[height=.8\paperheight]{images/fabio/ativ_4}
+\end{frame}
 
 \begin{frame}
 	\frametitle{Apresentacao do Fábio - Sugestão: Discussao sobre
