--- a/apresentacao_wanderson/apresentacao.tex
+++ b/apresentacao_wanderson/apresentacao.tex
@@ -133,8 +133,21 @@
       \lstinputlisting[language=Python, firstline=0, lastline=25,
       basicstyle=\ttfamily\scriptsize]{cnn1.py}
     \end{frame}
-    
 
+    \begin{frame}
+      \frametitle{Modelo do Experimento realizado para análise da
+        Rede}
+      \begin{itemize}
+        \item Após implementação a arquitetura foi testada para
+          verificar performance no conjunto de testes.
+        \item Queriamos observar a transformação da imagem de Input
+            após cada camada da ConvNet
+        \item A fim de analisar com mais detalhes, foram adicionadas
+          mais camadas convolucionais no modelo apresentado anteriormente.
+        \end{itemize}
+      \end{frame}
+      
+    
     \begin{frame}
       \frametitle{Apresentacao do Fábio - Sugestão: Introdução a exploração dos resultados}
     \end{frame}
