--- a/apresentacao_tex/main.tex
+++ b/apresentacao_tex/main.tex
@@ -13,6 +13,18 @@
 \usetikzlibrary{matrix,arrows.meta}
 
 \begin{document}
+\author{Bruno Canale \\ Bruno Giordano \\ Fábio Sancinetti \\
+  Wanderson Ferreira}
+	\title{Estudos sobre Redes Neurais Convolucionais}
+	\subtitle{Disciplina PSI5886 \\ Prof. Emilio Del
+          Moral Hernandez}
+	%\logo{}
+	%\institute{}
+	\date{\today}
+	%\subject{}
+	%\setbeamercovered{transparent}
+	%\setbeamertemplate{navigation symbols}{}
+        \maketitle
     \begin{frame}
 	\frametitle{Objetivos do Trabalho}
 	
