adicionando imagens sobre convolucoes
Signed-off-by: fsan <fabio.sancinetti@gmail.com>

--- a/apresentacao_tex/main.tex
+++ b/apresentacao_tex/main.tex
@@ -217,6 +217,15 @@ Alguns exemplos:
 	\frametitle{Apresentação do Bruno Canale}
 \end{frame}
 
+
+\begin{frame}
+	\frametitle{Visualizando a Convolução}
+	\centering
+	\par \url{http://setosa.io/ev/image-kernels/}
+	\par Explicação visual sobre Convoluções com demonstrações em Javascript
+\end{frame}
+
+
 \begin{frame}
 	\frametitle{Python - Keras Framework para Machine Learning}
 	
