adicionando exemplo de reconhecimento de voz microsoft
Signed-off-by: fsan <fabio.sancinetti@gmail.com>

--- a/apresentacao_tex/main.tex
+++ b/apresentacao_tex/main.tex
@@ -1494,6 +1494,21 @@ node distance=0.3cm
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{frame}
+	\frametitle{Outros exemplos de redes convolucionais}
+	\begin{itemize}
+		\item CNNs podem ser utilizadas para entradas bidimensionais como por exemplo reconhecimento de voz.
+		\item \textit{Convolutional Neural Networks for Speech Recognition (Ossama A.H. et Al., 2014 - Microsoft)}
+	\end{itemize}
+	\begin{center}
+		\begin{figure}
+		\includegraphics[width=0.9\textwidth]{images/fabio/ossama_et_al}
+		\caption{Imagem de Ossama A.H. et Al., 2014 exemplificado entrada e processamento no reconhecimento de voz com redes neurais convolucionais}
+		\end{figure}
+	\end{center}
+
+\end{frame}
+
+\begin{frame}
 	\frametitle{MLP \& CNN}
 	\centering
 	\begin{itemize}
